type apply: type constructor check